No modificar inputforms.xml si no hay auth creadas en bbdd

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -1,6 +1,6 @@
 0=Installation EDM
 0.steps=1,2,3,4,5,6,7,8
-0.menu=1: Installing Askosi|2: Create Auth Items|3: Configuring Dspace and Askosi|4: Configure EDMExport|5: Configure EDMCrosswalk|6: Configure EDMCrosswalk with xsl|7: Fill skos:about items with values of authorities|8: Exit
+0.menu=1: Installing Askosi|2: Configuring Dspace and Askosi|3: Create Auth Items|4: Configure EDMExport|5: Configure EDMCrosswalk|6: Configure EDMCrosswalk with xsl|7: Fill skos:about items with values of authorities|8: Exit
 0.error.commands=You must provide at least one command argument
 0.error.fail.init=Failure during filter init: #?#
 0.error.dspace.dir=The DSpace installation directory is no defined!!
@@ -21,8 +21,8 @@
 0.option.step=Choose step:
 
 0.step.askosi=1
-0.step.auth_item=2
-0.step.conf_dspace_askosi=3
+0.step.conf_dspace_askosi=2
+0.step.auth_item=3
 0.step.edmexport=4
 0.step.edmcrosswalk=5
 0.step.edmcrosswalkxsl=6
@@ -99,84 +99,86 @@
 1.copyPackageZipFile.failcreate.dir=Unable to create directory: #?#
 
 
-2=Beginning step 2: Create Auth Items
-2.summary=As surely on this step, communities, collections and items will be created in dspace for the auth elements, an authentication with a dspace user is required.\nDc elements will be able to be selected to create sets of auth elements in dspace.\nCommunity and collection will be created/linked to these auth elements.\nNon auth collections will be traversed to look for unique values and added to auth items in their collections.\nAuth items will be created with type SKOS_AUTH.
+2=Beginning step 2: Configuring Dspace and Askosi
+2.summary=Askosi must be installed (step 1) before run this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nNew elements will be able to be added if requested.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
 
-2.fail=Failed to complete step 2.
+2.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
+  elements.
+2.configureAll.inputforms.notexist=#?# not exist or is not readable.
+2.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
+2.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
+2.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
 
-2.createAuth.noadmin=User #?# is not admin
-2.createAuth.notschema=There is not schema #?#
-2.createAuth.numelements=Number elements in schema #?#:  #?#
-2.createAuth.menu=DC elements as authorities collections (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit)
-2.createAuth.listauth=List all Authorities
-2.createAuth.listdc=List all DC elements
-2.createAuth.notmetadata=There are not metatata elements
+2.addAuthDCElements=DC elements as authorities (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit and continue)
+2.addAuthDCElements.listauth=List all Authorities
+2.addAuthDCElements.listdc=List all DC elements
 
-2.createElementAuth.dc.element=DC Element (type x to go former menu):
-2.createElementAuth.handle.community=Handle community or empty to create new:
-2.createElementAuth.handle.collection=Handle collection or empty to create new:
-2.createElementAuth.element.nonauthcontrolled="#?#" element is not authority controlled in dspace.cfg. Go to step 3.
-2.createElementAuth.element.notexist=#?# Element does not exist.
-2.createElementAuth.create=Now Items will be created in this community #?# and collection #?# from the Items of not authorites collections.\nItems will be created with type SKOS_AUTH. Proceed ([y]/n)?
+2.addAuthDCElement=DC Element (type x to go former menu):
+2.addAuthDCElement.element.notexist=#?# Element does not exist.
 
-2.fillAuthItems.getitems=Getting items from collection: #?#
-2.fillAuthItems.additem=Adding item with value: #?#
-2.fillAuthItems.canceladd=Exists an authority with this value. Cancelling add operation.
-2.fillAuthItems.addmetadata=Adding metadata #?# , language: #?# , value: #?#, authority: #?#
-2.fillAuthItems.item.mismatch=Item #?# with handle #?# mismatch #?#
-2.fillAuthItems.collection.item.noelement=Collection #?# item #?# has not element #?# , language: #?#
+2.configureInputFormsDspace.notauth=There are not auth elements created in the database and owned by a collection\n so the input-forms.xml file will not be modified. Go to step 3.
 
-2.askCommunity.handle=Handle of parent community or empty:
-2.askCommunity.name=Community name:
-2.askCommunity.notexist=#?# Handle does not exist or is not a community.
+2.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
+2.configureInputFormsDspace.inputforms.file.exists=#?# File exists. Replace it ([y]/n)?
 
-2.askCollection.handle=Handle of collection or empty:
-2.askCollection.name=Collection name:
-2.askCollection.notexist=#?# Handle does not exist or is not a collection.
+2.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
+2.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
+
+2.updateElementvocabulary=Change current vocabulary "#?#" for element "#?#" at form "#?#" for new vocabulary "#?#" (y/[n])?
+
+2.addFieldForm.label=Label for element: #?#
+2.addFieldForm.hint=Hint for element: #?#
+
+2.configureDspaceCfg.dspacecfg.add=Creating new configuration dspace.cfg in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
+2.configureDspaceCfg.dspacecfg.file.exists=#?# File exists. Replace it ([y]/n)?
+2.configureDspaceCfg.askosidatadir=Askosi data directory: #?#
+2.configureDspaceCfg.element.incorrect=#?# Element is not properly configured. The correct one is going to be added. Please remove the incorrect one.
+2.configureDspaceCfg.element.add.fail=#?# Element failed to be added.
+2.configureDspaceCfg.element.add=#?# Element added.
+2.configureDspaceCfg.nothing.add= No auth elements added to dspace.cfg.
+
+2.readDspaceCfg.line.found.data=Found line: #?# with data dir #?#
+2.readDspaceCfg.line.found.content=Found line: #?# with content #?#
+2.readDspaceCfg.line.found=Found line: #?#
+2.readDspaceCfg.line.found.element=Found line: #?# with element #?#
+
+2.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
 
 
-3=Beginning step 3: Configuring Dspace and Askosi
-3.summary=Askosi must be installed (step 1) before run this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nNew elements will be able to be added if requested.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
+3=Beginning step 3: Create Auth Items
+3.summary=As surely on this step, communities, collections and items will be created in dspace for the auth elements, an authentication with a dspace user is required.\nDc elements will be able to be selected to create sets of auth elements in dspace.\nCommunity and collection will be created/linked to these auth elements.\nNon auth collections will be traversed to look for unique values and added to auth items in their collections.\nAuth items will be created with type SKOS_AUTH.
 
-3.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
-  elements. Go to step 2.
-3.configureAll.inputforms.notexist=#?# not exist or is not readable.
-3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
-3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
-3.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
+3.fail=Failed to complete step 3.
 
-3.addAuthDCElements=DC elements as authorities (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit and continue)
-3.addAuthDCElements.listauth=List all Authorities
-3.addAuthDCElements.listdc=List all DC elements
+3.createAuth.noadmin=User #?# is not admin
+3.createAuth.notschema=There is not schema #?#
+3.createAuth.numelements=Number elements in schema #?#:  #?#
+3.createAuth.menu=DC elements as authorities collections (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit)
+3.createAuth.listauth=List all Authorities
+3.createAuth.listdc=List all DC elements
+3.createAuth.notmetadata=There are not metatata elements
 
-3.addAuthDCElement=DC Element (type x to go former menu):
-3.addAuthDCElement.element.notexist=#?# Element does not exist.
+3.createElementAuth.dc.element=DC Element (type x to go former menu):
+3.createElementAuth.handle.community=Handle community or empty to create new:
+3.createElementAuth.handle.collection=Handle collection or empty to create new:
+3.createElementAuth.element.nonauthcontrolled="#?#" element is not authority controlled in dspace.cfg. Go to step 2.
+3.createElementAuth.element.notexist=#?# Element does not exist.
+3.createElementAuth.create=Now Items will be created in this community #?# and collection #?# from the Items of not authorites collections.\nItems will be created with type SKOS_AUTH. Proceed ([y]/n)?
 
-3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
-3.configureInputFormsDspace.inputforms.file.exists=#?# File exists. Replace it ([y]/n)?
+3.fillAuthItems.getitems=Getting items from collection: #?#
+3.fillAuthItems.additem=Adding item with value: #?#
+3.fillAuthItems.canceladd=Exists an authority with this value. Cancelling add operation.
+3.fillAuthItems.addmetadata=Adding metadata #?# , language: #?# , value: #?#, authority: #?#
+3.fillAuthItems.item.mismatch=Item #?# with handle #?# mismatch #?#
+3.fillAuthItems.collection.item.noelement=Collection #?# item #?# has not element #?# , language: #?#
 
-3.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
-3.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
+3.askCommunity.handle=Handle of parent community or empty:
+3.askCommunity.name=Community name:
+3.askCommunity.notexist=#?# Handle does not exist or is not a community.
 
-3.updateElementvocabulary=Change current vocabulary "#?#" for element "#?#" at form "#?#" for new vocabulary "#?#" (y/[n])?
-
-3.addFieldForm.label=Label for element: #?#
-3.addFieldForm.hint=Hint for element: #?#
-
-3.configureDspaceCfg.dspacecfg.add=Creating new configuration dspace.cfg in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
-3.configureDspaceCfg.dspacecfg.file.exists=#?# File exists. Replace it ([y]/n)?
-3.configureDspaceCfg.askosidatadir=Askosi data directory: #?#
-3.configureDspaceCfg.element.incorrect=#?# Element is not properly configured. The correct one is going to be added. Please remove the incorrect one.
-3.configureDspaceCfg.element.add.fail=#?# Element failed to be added.
-3.configureDspaceCfg.element.add=#?# Element added.
-3.configureDspaceCfg.nothing.add= No auth elements added to dspace.cfg.
-
-3.readDspaceCfg.line.found.data=Found line: #?# with data dir #?#
-3.readDspaceCfg.line.found.content=Found line: #?# with content #?#
-3.readDspaceCfg.line.found=Found line: #?#
-3.readDspaceCfg.line.found.element=Found line: #?# with element #?#
-
-3.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
+3.askCollection.handle=Handle of collection or empty:
+3.askCollection.name=Collection name:
+3.askCollection.notexist=#?# Handle does not exist or is not a collection.
 
 
 4=Beginning step 4: Configuring EDMExport with your dspace.cfg
