--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -1,6 +1,6 @@
 0=Instalador EDM
 0.steps=1,2,3,4,5,6,7,8
-0.menu=1: Instalar Askosi|2: Crear Items de Autoridad|3: Configurar Dspace y Askosi|4: Configurar EDMExport|5: Configurar EDMCrosswalk|6: Configurar EDMCrosswalk mediante xsl|7: Rellenar skos:about de ítems con valores de autoridades|8: Salir
+0.menu=1: Instalar Askosi|2: Configurar Dspace y Askosi|3: Crear Items de Autoridad|4: Configurar EDMExport|5: Configurar EDMCrosswalk|6: Configurar EDMCrosswalk mediante xsl|7: Rellenar skos:about de ítems con valores de autoridades|8: Salir
 0.error.commands=Debe suministrar al menos un parámetro al lanzar el instalador
 0.error.fail.init=Error durante el inicio del kernel de dspace: #?#
 0.error.dspace.dir=El directorio donde se instaló Dspace no está definido!!
@@ -21,8 +21,8 @@
 0.option.step=Escoja paso:
 
 0.step.askosi=1
-0.step.auth_item=2
-0.step.conf_dspace_askosi=3
+0.step.conf_dspace_askosi=2
+0.step.auth_item=3
 0.step.edmexport=4
 0.step.edmcrosswalk=5
 0.step.edmcrosswalkxsl=6
@@ -99,83 +99,85 @@
 1.copyPackageZipFile.failcreate.dir=No se pudo crear el directorio: #?#
 
 
-2=Comenzando paso 2: Creación de Items de autoridades
-2.summary=Como en este paso se van a crear comunidades, colecciones e ítems en dspace para las autoridades, se ha de validar como un usuario de dspace con permisos.\nSe mostrarán todos los elementos del esquema dc para escoger sobre cuáles crear conjuntos de autoridades en dspace.\nSe crearán/asociarán una comunidad y colección para estos elementos.\nSe recorrerán los ítems de las colecciones que no son de autoridades para buscar valores diferentes de estos elementos y añadiros a ítems de la colección de autoridades.\nLos ítems de autoridades se crearán con el tipo SKOS_AUTH.
+2=Comenzando paso 2: Configuración de Dspace y Askosi
+2.summary=Se ha de instalar Askosi (paso 1) antes de lanzar éste.\nSe copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo del instalador: work.\nSe recogerán todos los elementos de autoridades con sus colecciones.\nSe preguntará si se quieren añadir más elementos como autoridad en dspace.cfg\nSe modificará "dspace.cfg" para añadir el plugin de askosi y su directorio de trabajo.\nPara cada uno de los elementos de autoridades distintos se modificará "dspace.cfg" para añadir un vocabulario.\nSe copiará el archivo "input-forms.xml" al directorio de trabajo.\nPara cada colección se creará un formulario con su elemento para asociarlo al vocabulario.\nSe preguntará a qué formularios y a qué paǵinas de colecciones que no son autoridades, cada vocabulario debe ser añadido.\nSe crearán en el directorio de datos de Askosi, dos archivos para cada vocabulario para conectarse y realizar consultas a la base de datos relacional en la colección asociada al vocabulario.
 
-2.fail=Falló el paso 2.
+2.configureAll.notauthdcelements=No se procede a configurar el archivo input-forms.xml y el directorio de datos de askosi porque no hay elementos de autoridades dc.
+2.configureAll.inputforms.notexistEl archivo =#?# no existe o no tiene permisos de lectura.
+2.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
+2.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
+2.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo dspace.cfg al directorio de configuración de dspace\n El archivo input-forms.xml al directorio de configuración de dspace.
 
-2.createAuth.noadmin=El usuario #?# no es administrador
-2.createAuth.notschema=No existe el esquema #?#
-2.createAuth.numelements=Número de elementos en el esquema #?#:  #?#
-2.createAuth.menu=Elementos DC para las colecciones de autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir)
-2.createAuth.listauth=Listar todas las autoridades
-2.createAuth.listdc=Listar todos los elementos DC
-2.createAuth.notmetadata=No hay elementos de metadatos
+2.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
+2.addAuthDCElements.listauth=Listar todas las autoridades
+2.addAuthDCElements.listdc=Listar todos los elementos DC
 
-2.createElementAuth.dc.element=Elemento DC (escribir x para volver al menú anterior):
-2.createElementAuth.handle.community=Introduzca el handle de la comunidad o deje vacío para crear una nueva:
-2.createElementAuth.handle.collection=Introduzca el handle de la colección o deje vacío para crear una nueva:
-2.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades. Ir al paso 3.
-2.createElementAuth.element.notexist=El elemento #?# no existe.
-2.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([y]/n)?
+2.addAuthDCElement=Elemento DC (escribir x para volver al menú anterior):
+2.addAuthDCElement.element.notexist=El elemento #?# no existe.
 
-2.fillAuthItems.getitems=Obtener los ítems de la colección: #?#
-2.fillAuthItems.additem=Crear ítem con valor: #?#
-2.fillAuthItems.canceladd=Ya existe una autoridad con este valor. Cancelando la operación de creación.
-2.fillAuthItems.addmetadata=Creando metadatos #?# , idioma: #?# , valor: #?#, authority: #?#
-2.fillAuthItems.item.mismatch=Item #?# con handle #?# no concuerda #?#
-2.fillAuthItems.collection.item.noelement=Colección #?# item #?# no posee element #?# , idioma: #?#
+2.configureInputFormsDspace.notauth=No hay elementos de autoridad creados en la base de datos y asociados a una colección\n por lo que no se puede modificar el archivo input-forms.xml. Ir al paso 3.
 
-2.askCommunity.handle=Introduzca el handle de la comunidad padre o vacío para crear una nueva:
-2.askCommunity.name=Nombre de la comunidad:
-2.askCommunity.notexist=El handle #?# no existe o no es de una comunidad.
+2.configureInputFormsDspace.inputforms.add=Creando un nuevo archivo input-forms.xml en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+2.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
 
-2.askCollection.handle=Introduzca el handle de la colección padre o vacío para crear una nueva:
-2.askCollection.name=Nombre de la colección:
-2.askCollection.notexist=El handle #?# no existe o no es de una colección.
+2.readInputFormsDspace.element.page=¿A qué página el elemento "#?#" del formulario "#?#" debe ir en el archivo input-forms?
+2.readInputFormsDspace.element.form=¿A qué colecciones el elemento "#?#" del vocabulario "#?#" debe ir en el archivo input-forms (introduzca sus handles o/y default para todas las colecciones separados por comas)?
+
+2.updateElementvocabulary=¿Cambiar el vocabulario actual "#?#" para el elemento "#?#" en el formulario "#?#" oor nuevo vocabulario "#?#" (y/[n])?
+
+2.addFieldForm.label=Etiqueta para el elemento: #?#
+2.addFieldForm.hint=Ayuda para el elemento: #?#
+
+2.configureDspaceCfg.dspacecfg.add=Creando nueva archivo dspace.cfg en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+2.configureDspaceCfg.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+2.configureDspaceCfg.askosidatadir=Directorio de datos de Askosi: #?#
+2.configureDspaceCfg.element.incorrect=El elemento #?# no está correctamente configurado. se añadirá uno correcto. Borre el incorrecto.
+2.configureDspaceCfg.element.add.fail=El elemento #?# no se pudo añadir.
+2.configureDspaceCfg.element.add=Elemento #?# añadido.
+2.configureDspaceCfg.nothing.add=No se añadieron elementos de autoridad al archivo dspace.cfg.
+
+2.readDspaceCfg.line.found.data=Línea encontrada: #?# con el directorio de datos #?#
+2.readDspaceCfg.line.found.content=Línea encontrada: #?# con el contenido #?#
+2.readDspaceCfg.line.found=Línea encontrada: #?#
+2.readDspaceCfg.line.found.element=Línea encontrada: #?# con el elemento #?#
+
+2.processAskosiVocabularies.create=Creando el archivo de configuración de askosi "#?#" para el vocabulario "#?#"
 
 
-3=Comenzando paso 3: Configuración de Dspace y Askosi
-3.summary=Se ha de instalar Askosi (paso 1) antes de lanzar éste.\nSe copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo del instalador: work.\nSe recogerán todos los elementos de autoridades con sus colecciones.\nSe preguntará si se quieren añadir más elementos como autoridad en dspace.cfg\nSe modificará "dspace.cfg" para añadir el plugin de askosi y su directorio de trabajo.\nPara cada uno de los elementos de autoridades distintos se modificará "dspace.cfg" para añadir un vocabulario.\nSe copiará el archivo "input-forms.xml" al directorio de trabajo.\nPara cada colección se creará un formulario con su elemento para asociarlo al vocabulario.\nSe preguntará a qué formularios y a qué paǵinas de colecciones que no son autoridades, cada vocabulario debe ser añadido.\nSe crearán en el directorio de datos de Askosi, dos archivos para cada vocabulario para conectarse y realizar consultas a la base de datos relacional en la colección asociada al vocabulario.
+3=Comenzando paso 3: Creación de Items de autoridades
+3.summary=Como en este paso se van a crear comunidades, colecciones e ítems en dspace para las autoridades, se ha de validar como un usuario de dspace con permisos.\nSe mostrarán todos los elementos del esquema dc para escoger sobre cuáles crear conjuntos de autoridades en dspace.\nSe crearán/asociarán una comunidad y colección para estos elementos.\nSe recorrerán los ítems de las colecciones que no son de autoridades para buscar valores diferentes de estos elementos y añadiros a ítems de la colección de autoridades.\nLos ítems de autoridades se crearán con el tipo SKOS_AUTH.
 
-3.configureAll.notauthdcelements=No se procede a configurar el archivo input-forms.xml y el directorio de datos de askosi porque no hay elementos de autoridades dc. Vaya al paso 2.
-3.configureAll.inputforms.notexistEl archivo =#?# no existe o no tiene permisos de lectura.
-3.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
-3.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
-3.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo dspace.cfg al directorio de configuración de dspace\nEl archivo input-forms.xml al directorio de configuración de dspace.
+3.fail=Falló el paso 3.
 
-3.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
-3.addAuthDCElements.listauth=Listar todas las autoridades
-3.addAuthDCElements.listdc=Listar todos los elementos DC
+3.createAuth.noadmin=El usuario #?# no es administrador
+3.createAuth.notschema=No existe el esquema #?#
+3.createAuth.numelements=Número de elementos en el esquema #?#:  #?#
+3.createAuth.menu=Elementos DC para las colecciones de autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir)
+3.createAuth.listauth=Listar todas las autoridades
+3.createAuth.listdc=Listar todos los elementos DC
+3.createAuth.notmetadata=No hay elementos de metadatos
 
-3.addAuthDCElement=Elemento DC (escribir x para volver al menú anterior):
-3.addAuthDCElement.element.notexist=El elemento #?# no existe.
+3.createElementAuth.dc.element=Elemento DC (escribir x para volver al menú anterior):
+3.createElementAuth.handle.community=Introduzca el handle de la comunidad o deje vacío para crear una nueva:
+3.createElementAuth.handle.collection=Introduzca el handle de la colección o deje vacío para crear una nueva:
+3.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades. Ir al paso 2.
+3.createElementAuth.element.notexist=El elemento #?# no existe.
+3.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([y]/n)?
 
-3.configureInputFormsDspace.inputforms.add=Creando un nuevo archivo input-forms.xml en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-3.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+3.fillAuthItems.getitems=Obtener los ítems de la colección: #?#
+3.fillAuthItems.additem=Crear ítem con valor: #?#
+3.fillAuthItems.canceladd=Ya existe una autoridad con este valor. Cancelando la operación de creación.
+3.fillAuthItems.addmetadata=Creando metadatos #?# , idioma: #?# , valor: #?#, authority: #?#
+3.fillAuthItems.item.mismatch=Item #?# con handle #?# no concuerda #?#
+3.fillAuthItems.collection.item.noelement=Colección #?# item #?# no posee element #?# , idioma: #?#
 
-3.readInputFormsDspace.element.page=¿A qué página el elemento "#?#" del formulario "#?#" debe ir en el archivo input-forms?
-3.readInputFormsDspace.element.form=¿A qué colecciones el elemento "#?#" del vocabulario "#?#" debe ir en el archivo input-forms (introduzca sus handles o/y default para todas las colecciones separados por comas)?
+3.askCommunity.handle=Introduzca el handle de la comunidad padre o vacío para crear una nueva:
+3.askCommunity.name=Nombre de la comunidad:
+3.askCommunity.notexist=El handle #?# no existe o no es de una comunidad.
 
-3.updateElementvocabulary=¿Cambiar el vocabulario actual "#?#" para el elemento "#?#" en el formulario "#?#" oor nuevo vocabulario "#?#" (y/[n])?
-
-3.addFieldForm.label=Etiqueta para el elemento: #?#
-3.addFieldForm.hint=Ayuda para el elemento: #?#
-
-3.configureDspaceCfg.dspacecfg.add=Creando nueva archivo dspace.cfg en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
-3.configureDspaceCfg.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
-3.configureDspaceCfg.askosidatadir=Directorio de datos de Askosi: #?#
-3.configureDspaceCfg.element.incorrect=El elemento #?# no está correctamente configurado. se añadirá uno correcto. Borre el incorrecto.
-3.configureDspaceCfg.element.add.fail=El elemento #?# no se pudo añadir.
-3.configureDspaceCfg.element.add=Elemento #?# añadido.
-3.configureDspaceCfg.nothing.add=No se añadieron elementos de autoridad al archivo dspace.cfg.
-
-3.readDspaceCfg.line.found.data=Línea encontrada: #?# con el directorio de datos #?#
-3.readDspaceCfg.line.found.content=Línea encontrada: #?# con el contenido #?#
-3.readDspaceCfg.line.found=Línea encontrada: #?#
-3.readDspaceCfg.line.found.element=Línea encontrada: #?# con el elemento #?#
-
-3.processAskosiVocabularies.create=Creando el archivo de configuración de askosi "#?#" para el vocabulario "#?#"
+3.askCollection.handle=Introduzca el handle de la colección padre o vacío para crear una nueva:
+3.askCollection.name=Nombre de la colección:
+3.askCollection.notexist=El handle #?# no existe o no es de una colección.
 
 
 4=Comenzando el paso 4: Configuración del módulo EDMExport con la ruta del archivo de configuración de dspace.cfg
