Mensaje de reinicar tomcat al cambiar dspace.cfg

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -108,6 +108,7 @@
 2.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 2.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
 2.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
+2.configureAll.restart=You must restart  the servlet (e.g. Tomcat)
 
 2.addAuthDCElements=DC elements as authorities (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit and continue)
 2.addAuthDCElements.listauth=List all Authorities
