--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -107,6 +107,7 @@
 2.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
 2.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
 2.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo dspace.cfg al directorio de configuración de dspace\n El archivo input-forms.xml al directorio de configuración de dspace.
+2.configureAll.restart=Debe reiniciar el servidor de aplicaciones (e.g. Tomcat)
 
 2.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
 2.addAuthDCElements.listauth=Listar todas las autoridades
