anyadir mensajes de lista vacía y de num de items modificados

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -102,17 +102,17 @@
 2=Beginning step 2: Configuring Dspace and Askosi
 2.summary=Askosi must be installed (step 1) before run this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nNew elements will be able to be added if requested.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
 
-2.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
-  elements.
+2.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc elements.
 2.configureAll.inputforms.notexist=#?# not exist or is not readable.
 2.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 2.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
 2.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
-2.configureAll.restart=You must restart  the servlet (e.g. Tomcat)
+2.configureAll.restart="dspace.cfg" file has been modified in the work directory.\nYou must copy it to the dspace config directory.\nYou must restart  the servlet (e.g. Tomcat)
 
 2.addAuthDCElements=DC elements as authorities (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit and continue)
 2.addAuthDCElements.listauth=List all Authorities
 2.addAuthDCElements.listdc=List all DC elements
+2.addAuthDCElements.notauthdcelements=There are not auth dc elements. You must enter a new authority.
 
 2.addAuthDCElement=DC Element (type x to go former menu):
 2.addAuthDCElement.element.notexist=#?# Element does not exist.
@@ -158,6 +158,7 @@
 3.createAuth.listauth=List all Authorities
 3.createAuth.listdc=List all DC elements
 3.createAuth.notmetadata=There are not metatata elements
+3.createAuth.notauthdcelements=There are not auth dc elements. You must enter a new authority.
 
 3.createElementAuth.dc.element=DC Element (type x to go former menu):
 3.createElementAuth.handle.community=Handle community or empty to create new:
@@ -258,6 +259,7 @@
 7.configure.auth.num=Number of auth elements: #?#
 7.configure.checkAllSkosAuthElements=Getting the DC elements related to authorities
 7.configure.traverseNonauthItems=Traversing items to assign authorities to the DC elements matching an authority
+7.configure.numItemsModified=Number of modified items: #?#
 
 7.traverseNonauthItems.nopermission=User #?# has not admin permissions for item with handle #?#
 7.traverseNonauthItems.collection=Collection #?# with handle #?#
