--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -107,11 +107,12 @@
 2.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
 2.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
 2.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo dspace.cfg al directorio de configuración de dspace\n El archivo input-forms.xml al directorio de configuración de dspace.
-2.configureAll.restart=Debe reiniciar el servidor de aplicaciones (e.g. Tomcat)
+2.configureAll.restart=Se ha modificado el archivo "dspace.cfg" en el directorio de trabajo.\nDebe copiarlo al directorio de configuración de dspace.\nDebe reiniciar el servidor de aplicaciones (e.g. Tomcat)
 
 2.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
 2.addAuthDCElements.listauth=Listar todas las autoridades
 2.addAuthDCElements.listdc=Listar todos los elementos DC
+2.addAuthDCElements.notauthdcelements=No hay elementos de autoridades dc. Debe introducir una nueva autoridad.
 
 2.addAuthDCElement=Elemento DC (escribir x para volver al menú anterior):
 2.addAuthDCElement.element.notexist=El elemento #?# no existe.
@@ -157,11 +158,12 @@
 3.createAuth.listauth=Listar todas las autoridades
 3.createAuth.listdc=Listar todos los elementos DC
 3.createAuth.notmetadata=No hay elementos de metadatos
+3.createAuth.notauthdcelements=No hay elementos de autoridades dc. Debe introducir una nueva autoridad.
 
 3.createElementAuth.dc.element=Elemento DC (escribir x para volver al menú anterior):
 3.createElementAuth.handle.community=Introduzca el handle de la comunidad o deje vacío para crear una nueva:
 3.createElementAuth.handle.collection=Introduzca el handle de la colección o deje vacío para crear una nueva:
-3.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades. Ir al paso 2.
+3.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades o controlado por ellas. Ir al paso 2.
 3.createElementAuth.element.notexist=El elemento #?# no existe.
 3.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([y]/n)?
 
@@ -257,6 +259,7 @@
 7.configure.auth.num=Número de elementos de autoridades: #?#
 7.configure.checkAllSkosAuthElements=Recogiendo los elementos DC que son autoridades
 7.configure.traverseNonauthItems=Recorriendo los ítems para asignarles autoridades a los elementos DC con valores coincidentes con una autoridad
+7.configure.numItemsModified=Número de ítems modificados: #?#
 
 7.traverseNonauthItems.nopermission=El usuario #?# no tiene permisos de admin para el ítem con handle #?#
 7.traverseNonauthItems.collection=Colección #?# con handle #?#
